update responsive ui

--- a/views/productdetail.ejs
+++ b/views/productdetail.ejs
@@ -53,8 +53,10 @@
                                 </div>
                                 <div class="flex-container">
                                     <div>
-                                        <img class="flex-item" src="/products/bayern.jpeg" onclick="display(this)">
+                                        <!-- tam anh goc -->
+                                        <img class="flex-item" src="/products/<%= product.image%>" onclick="display(this)">
                                     </div>
+                                    <!-- 3 tam anh khac cung san pham -->
                                     <div>2</div>
                                     <div>3</div>  
                                     <div>4</div>
