--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,7 +14,7 @@
         }
         
         .product-item {
-            margin-top: 15px;
+            margin-top: 5px;
         }
         
         .new_product {
@@ -58,7 +58,7 @@
             width: 100%;
             height: 15vw;
             object-fit: cover;
-            margin-top: 15px;
+            margin-top: 5px;
         }
         
         .carousel-inner>.item>img,
@@ -115,7 +115,8 @@
             line-height: 35px;
             border-color:#e00000;
             color:#e00000;
-            font-size: 16px;	 margin: 0;	
+            font-size: 16px;	 
+            margin: 0;	
         }
         .topbar-hotline a.phone-num .fa {
             width: 22px;
@@ -187,7 +188,7 @@
         .grid-container > div {
             background-color: rgba(255, 255, 255, 0.8);
             text-align: center;
-            padding: 20px 0;
+            padding: 0px 0px;
             font-size: 14px;
         }
 
@@ -195,7 +196,7 @@
             .grid-container {
                 display: grid;
                 grid-template-columns: auto auto;
-                grid-gap: 10px;
+                grid-gap: 3px 3px;
                 background-color: #ffff;
                 padding: 10px;
             }
