--- a/views/header.ejs
+++ b/views/header.ejs
@@ -44,6 +44,13 @@
             .sidenav .form-inline.my-2.my-lg-0 .form-control.mr-sm-2{
                 width: 85%;
             }
+            .sidenav .closebtn {
+                position: absolute;
+                top: 0;
+                right: 10px;
+                font-size: 36px;
+                margin-left: 25px;
+            }
         }
 
         .dropdown{
