--- a/views/newarrivals.ejs
+++ b/views/newarrivals.ejs
@@ -16,17 +16,33 @@
         }
         
         .product-item {
-            margin-top: 15px;
+            margin-top: 5px;
         }
         
-        @media screen and (max-height: 450px) {}
-        
         .new_product {
+            font-weight: bold;
             text-align: center;
+        }
+        .new_product > a{
+            font-weight: bold;
+            color: black;
+        }
+        .new_product:hover a{
+            color: coral;
         }
         
         .populate_product {
             text-align: center;
+            font-weight: bold;
+        }
+
+        .populate_product > a{
+            font-weight: bold;
+            color: black;
+        }
+
+        .populate_product:hover a{
+            color: coral;
         }
         
         footer {
@@ -44,7 +60,7 @@
             width: 100%;
             height: 15vw;
             object-fit: cover;
-            margin-top: 15px;
+            margin-top: 5px;
         }
         
         .carousel-inner>.item>img,
@@ -101,7 +117,8 @@
             line-height: 35px;
             border-color:#e00000;
             color:#e00000;
-            font-size: 16px;	 margin: 0;	
+            font-size: 16px;	 
+            margin: 0;	
         }
         .topbar-hotline a.phone-num .fa {
             width: 22px;
@@ -117,10 +134,51 @@
             vertical-align: middle;margin-right:5px;
         }
 
+        .banner-footer-item-title{
+            font-weight: 450;
+        }
+
+        .box-icon:not(.policy_home) .banner-footer-item {
+            border: 1px black solid;
+            padding: 10px 10px 52px 10px;
+            margin-bottom: 45px;
+        }
+        .box-icon:not(.policy_home) .banner-footer-item img {
+            float: left;
+            margin-left: 0px;
+            max-height: 42px;
+        }
+        .box-icon:not(.policy_home) .banner-footer-item .banner-footer-item-info {
+            float: left;
+            padding-left: 15px;
+            margin: 10px 0 0 0;
+        }
+        .box-icon:not(.policy_home) .banner-footer-item .banner-footer-item-info .banner-footer-item-title {
+            color: black;
+            text-transform: uppercase;
+            font-size: 14px;
+            font-weight: bold;
+            margin: 0;
+        }
+        .banner-footer-item-des {
+            display: none;
+        }
+        /* button xem them san pham */
+        .button-showmore .moreproduct {
+            padding: 7px 20px;
+            text-transform: uppercase;
+            border: 2px solid #000;
+            border-radius: 0;
+            font-size: 13px;
+            font-weight: bold;
+            color: #000 !important;
+            margin-left: 45%;
+        }
         .card-img-top{
             width: 100%;
             height: auto;
         }
+        
         .grid-container {
             display: grid;
             grid-template-columns: auto auto auto auto;
@@ -132,7 +190,7 @@
         .grid-container > div {
             background-color: rgba(255, 255, 255, 0.8);
             text-align: center;
-            padding: 20px 0;
+            padding: 0px 0px;
             font-size: 14px;
         }
 
@@ -140,7 +198,7 @@
             .grid-container {
                 display: grid;
                 grid-template-columns: auto auto;
-                grid-gap: 10px;
+                grid-gap: 3px 3px;
                 background-color: #ffff;
                 padding: 10px;
             }
