--- a/views/home.ejs
+++ b/views/home.ejs
@@ -200,6 +200,16 @@
                 background-color: #ffff;
                 padding: 10px;
             }
+            .button-showmore .moreproduct {
+                padding: 7px 20px;
+                text-transform: uppercase;
+                border: 2px solid #000;
+                border-radius: 0;
+                font-size: 13px;
+                font-weight: bold;
+                color: #000 !important;
+                margin-left: 40%;
+            }
         }
     </style>
 </head>
