--- a/views/guide-policy/guide.choosesize.ejs
+++ b/views/guide-policy/guide.choosesize.ejs
@@ -1,1 +1,9 @@
-<h1>Huong dan chon size</h1>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+
+  </head>
+  <body>
+    <h1>GUIDE CHOOSE SIZE</h1>
+  </body>
+</html>
