--- a/views/newarrivals.ejs
+++ b/views/newarrivals.ejs
@@ -268,7 +268,7 @@
     </div>
 
     <!-- get all number item from database then page panigate -->
-    <nav aria-label="Page navigation" style="margin-left: 45%;">
+    <nav aria-label="Page navigation" class="page-panigation" style="margin-left: 30%;">
         <ul class="pagination">
             <li class="page-item">
                 <a class="page-link" href="#">Previous</a>
