--- a/views/carts.ejs
+++ b/views/carts.ejs
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>League store 77</title>
+    <link rel="icon" href="/assets/logo.jpg">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
@@ -101,7 +102,7 @@
         <div class="row">
             <div class="col-md-2"></div>
             <div class="col-md-8">
-                <a href="/order" class="btn btn-raised  btn-success">Đặt hàng</a>
+                <input type="submit" class="btn btn-raised  btn-success" value="Đặt hàng">
                 <a href="/" class="btn btn-raised  btn-success">Tiếp tục mua hàng</a>
             </div>
         </div>
