--- a/views/order.ejs
+++ b/views/order.ejs
@@ -14,13 +14,12 @@
     <% if(bill) {%>
       <div class="row">
         <div class="col-md-2"></div>
-        <label>Khách hàng: <%= bill.name%></label><br>
-        <div class="col-md-2"></div>
-        <label>Email: <%= bill.email%></label><br>
-        <div class="col-md-2"></div>
-        <label>Điện thoại: <%= bill.phone%></label><br>
-        <div class="col-md-2"></div>
-        <label>Địa chỉ: <%= bill.address%></label><br>
+        <div class="col-md-8">
+          <label>Khách hàng: <%= bill.name%></label><br>
+          <label>Email: <%= bill.email%></label><br>
+          <label>Điện thoại: <%= bill.phone%></label><br>
+          <label>Địa chỉ: <%= bill.address%></label><br>
+        </div>
       </div>
       <div class="row">
         <div class="col-md-2"></div>
