add quan ly don hang

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -245,6 +245,7 @@
                         <ul class="dropdown-menu">
                             <li><a href="/admin">Quản lý người dùng</a></li>
                             <li><a href="/producttable">Quản lý sản phẩm</a></li>
+                            <li><a href="/orders">Quản lý đơn hàng</li>
                             <li><a href="/summary">Thống kê</a></li>
                             <li><a href="/campaign">Chiến dịch bán hàng</a></li>
                             <li><a href="/uploadbanner">Upload banner</a></li>
