--- a/views/index.ejs
+++ b/views/index.ejs
@@ -262,7 +262,7 @@
             </div>
         </div>
     </div>
-    <%- include ('header') %>
+    <%- include ('header', {products: products}) %>
     <%- include ('slideshow') %>
     <br>
     <div class="grid-container-top">
