--- a/views/news.ejs
+++ b/views/news.ejs
@@ -1,1 +1,285 @@
-<h1>NEWS PAGE</h1>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>League store 77</title>
+    <link rel="icon" href="/assets/logoweb.jpg">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <style>
+        .container {
+            align-items: center;
+        }
+        
+        .product-item {
+            margin-top: 5px;
+        }
+        
+        .new_product {
+            font-weight: bold;
+            text-align: center;
+        }
+        .new_product > a{
+            font-weight: bold;
+            color: black;
+        }
+        .new_product:hover a{
+            color: coral;
+        }
+        
+        .populate_product {
+            text-align: center;
+            font-weight: bold;
+        }
+
+        .populate_product > a{
+            font-weight: bold;
+            color: black;
+        }
+
+        .populate_product:hover a{
+            color: coral;
+        }
+        
+        footer {
+            text-align: center;
+            padding: 3px;
+            background-color: #111;
+            color: white;
+            bottom: 0rem;
+            position: relative;
+            width: 100%;
+            opacity: calc();
+        }
+        
+        .card-img-top {
+            width: 100%;
+            height: 15vw;
+            object-fit: cover;
+            margin-top: 5px;
+        }
+        
+        .carousel-inner>.item>img,
+        .carousel-inner>.item>a>img {
+            width: 70%;
+            margin: auto;
+        }
+        
+        .line-through {
+            text-decoration: line-through;
+        }
+        
+        .none {
+            color: coral;
+        }
+        
+        img.hover-shadow {
+            transition: 0.3s;
+        }
+        
+        .hover-shadow:hover {
+            box-shadow: 0 4px 8px 0 rgba(243, 238, 238, 0.2), 0 6px 20px 0 rgba(231, 221, 221, 0.19);
+        }
+
+        .dropdown a:hover{
+            text-decoration: underline;
+        }
+
+        .row{
+            margin-right: -15px;
+            margin-left: -15px;
+        }
+
+        .container-fluid {
+            padding-right: 15px;
+            padding-left: 15px;
+            margin-right: auto;
+            margin-left: auto;
+        }
+
+        #topbar {background: #7F7F7F ;font-size: 12px; color: #FFFF}
+        #topbar-down {background: #faf4f4 ;font-size: 14px; color: rgb(221, 207, 207)}
+        #topbar p {padding: 4px 0;margin-bottom:0;}
+        #topbar-down p {padding: 4px 0;margin-bottom:0;}
+        .topbar-hotline a.phone-num { display: inline-block;}
+        .topbar-hotline {text-align: right;margin: 3.5px 0 0;}
+        .topbar-hotline span.text-phone{color:#FFFF;font-weight:bold;letter-spacing:0.4px;}
+        .topbar-hotline span.circle-phone{
+            display: inline-block;border-radius: 50%;
+            -webkit-animation: ripple 1.0s linear infinite;
+            animation: ripple 1.0s linear infinite;
+        }
+        .topbar-hotline a.phone-num .fa {
+            width: 35px;
+            height: 35px;
+            line-height: 35px;
+            border-color:#e00000;
+            color:#e00000;
+            font-size: 16px;	 
+            margin: 0;	
+        }
+        .topbar-hotline a.phone-num .fa {
+            width: 22px;
+            height: 22px;
+            line-height: 22px;
+            border: 1px solid #FFFF;
+            color: #FFFF;
+            border-radius: 50%;
+            text-align: center;
+            animation: 1s ease-in-out 0s normal none infinite running h-alo-ring-ring;
+            font-size: 10px;
+            display: inline-block;
+            vertical-align: middle;margin-right:5px;
+        }
+
+        .banner-footer-item-title{
+            font-weight: 450;
+        }
+
+        .box-icon:not(.policy_home) .banner-footer-item {
+            border: 1px black solid;
+            padding: 10px 10px 52px 10px;
+            margin-bottom: 45px;
+        }
+        .box-icon:not(.policy_home) .banner-footer-item img {
+            float: left;
+            margin-left: 0px;
+            max-height: 42px;
+        }
+        .box-icon:not(.policy_home) .banner-footer-item .banner-footer-item-info {
+            float: left;
+            padding-left: 15px;
+            margin: 10px 0 0 0;
+        }
+        .box-icon:not(.policy_home) .banner-footer-item .banner-footer-item-info .banner-footer-item-title {
+            color: black;
+            text-transform: uppercase;
+            font-size: 14px;
+            font-weight: bold;
+            margin: 0;
+        }
+        .banner-footer-item-des {
+            display: none;
+        }
+        /* button xem them san pham */
+        .button-showmore .moreproduct {
+            padding: 7px 20px;
+            text-transform: uppercase;
+            border: 2px solid #000;
+            border-radius: 0;
+            font-size: 13px;
+            font-weight: bold;
+            color: #000 !important;
+            margin-left: 45%;
+        }
+        .card-img-top{
+            width: 100%;
+            height: auto;
+        }
+        
+        .grid-container {
+            display: grid;
+            grid-template-columns: auto auto auto auto;
+            grid-gap: 10px;
+            background-color: #ffff;
+            padding: 10px;
+        }
+
+        .grid-container > div {
+            background-color: rgba(255, 255, 255, 0.8);
+            text-align: center;
+            padding: 0px 0px;
+            font-size: 14px;
+        }
+
+        .grid-container-top {
+            display: grid;
+            grid-template-columns: auto auto auto;
+            grid-gap: 10px;
+            background-color: #ffff;
+            padding: 10px;
+        }
+
+        .grid-container-top > div {
+            background-color: rgba(255, 255, 255, 0.8);
+            text-align: center;
+            padding: 0px 0px;
+            font-size: 14px;
+        }
+
+        @media screen and (max-width: 600px) {
+            .grid-container {
+                display: grid;
+                grid-template-columns: auto auto;
+                grid-gap: 3px 3px;
+                background-color: #ffff;
+                padding: 10px;
+            }
+
+            .grid-container-top {
+                display: grid;
+                grid-template-columns: auto auto auto;
+                grid-gap: 3px 3px;
+                background-color: #ffff;
+                padding: 10px;
+                border: thin solid rgb(228, 216, 216);
+                border-radius: 3px;
+            }
+            
+            .button-showmore .moreproduct{
+                padding: 7px 20px;
+                text-transform: uppercase;
+                border: 2px solid #000;
+                border-radius: 0;
+                font-size: 13px;
+                font-weight: bold;
+                color: #000 !important;
+                margin-left: 40%;
+            }
+        }
+    </style>
+  </head>
+  <body>
+    <div id="topbar">
+      <div class="container-fluid" style="margin-left: 20px;">
+          <div class="row">
+              <div class="col-md-6 col-sm-6 col-xs-12 topbar-content">
+                  <p>
+                      <strong> Miễn phí </strong>
+                      giao hàng toàn quốc với đơn hàng
+                      <strong> trên 500k </strong>
+                  </p>
+              </div>
+              <div class="col-md-6 col-sm-6 col-xs-12 topbar-hotline">
+                  <a class="phone-num" href="tel:0123456789"></a>
+                  <span class="circle-phone">
+                      <i class="fa fa-phone"></i>
+                  </span>
+                  <span class="text-phone">Hot line: 0123456789</span>
+              </div>
+          </div>
+      </div>
+    </div>
+    <%- include('header', {products: products}) %>
+    <div id="topbar-down">
+      <div class="container-fluid" style="margin-left: 20px;">
+          <div class="row">
+              <div class="col-md-6 col-sm-6 col-xs-12 topbar-content">
+                <p>
+                  <a href="/">Trang chủ</a> / Tất cả bài viết
+                </p>
+              </div>
+              <div class="col-md-6 col-sm-6 col-xs-12 topbar-hotline">
+                  <a class="phone-num" href="tel:0123456789"></a>
+                  <span class="circle-phone">
+                      <i class="fa fa-phone"></i>
+                  </span>
+              </div>
+          </div>
+      </div>
+    </div>
+    <h3>TẤT CẢ BÀI VIẾT</h3>
+  </body>
+</html>
