--- a/views/header.ejs
+++ b/views/header.ejs
@@ -173,6 +173,7 @@
                 float: right;
                 right: 10px;
             }
+
         }
 
         @media screen and (max-width: 600px){   
@@ -188,6 +189,9 @@
                 text-align: left;
                 left: 0px;
             }  
+            .navbar.navbar-dark.bg-dark.responsive > .navbar.navbar-header > .narbar-brand, a{
+                margin-left: 35%;
+            }
         }
 
     </style>
@@ -196,11 +200,11 @@
     
     <nav class="navbar navbar-dark bg-dark" id="topMenu" style="background-color: #FFF;">
         <div class="navbar navbar-header">
-            <a class="navbar-brand" href="/" style="margin-left: 35%;">
+            <a class="navbar-brand" href="/">
                 <img src="/assets/logo.jpg" width="90px" height="50px" alt="League store 77">
             </a>
-        </div>
-        <div class="container-fluid"> 
+        </div>   
+        <div class="container-fluid" style="margin-top: 20px;"> 
             <ul class="nav navbar-nav">
                 <li class="active"><a href="/">TRANG CHỦ</a></li>
                 <li>
