update header ui

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -189,8 +189,8 @@
                 text-align: left;
                 left: 0px;
             }  
-            .navbar.navbar-dark.bg-dark.responsive > .navbar.navbar-header > .narbar-brand, a{
-                margin-left: 35%;
+            .navbar.navbar-dark.bg-dark.responsive > .navbar.navbar-header > a, .brand-img{
+                margin-left: 175px;
             }
         }
 
@@ -201,7 +201,7 @@
     <nav class="navbar navbar-dark bg-dark" id="topMenu" style="background-color: #FFF;">
         <div class="navbar navbar-header">
             <a class="navbar-brand" href="/">
-                <img src="/assets/logo.jpg" width="90px" height="50px" alt="League store 77">
+                <img class="brand-img" src="/assets/logo.jpg" width="90px" height="50px" alt="League store 77">
             </a>
         </div>   
         <div class="container-fluid" style="margin-top: 20px;"> 
