reset menu header

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -188,9 +188,6 @@
                 text-align: left;
                 left: 0px;
             }
-            .navbar.navbar-dark.bg-dark.responsive > .container-fluid > .nav.navbar-nav{
-                margin-left: 0px;
-            }
         }
 
     </style>
@@ -203,8 +200,8 @@
                 <img class="brand-img" src="/assets/logo.jpg" width="90px" height="50px" alt="League store 77">
             </a>
         </div>   
-        <div class="container-fluid" style="margin-top: 20px;"> 
-            <ul class="nav navbar-nav" style="margin-left: 35px;">
+        <div class="container-fluid" style="margin-top: 5px;"> 
+            <ul class="nav navbar-nav">
                 <li class="active"><a href="/">TRANG CHỦ</a></li>
                 <li>
                     <a href="/newarrivals">NEW ARRIVAL</a>
