--- a/views/header.ejs
+++ b/views/header.ejs
@@ -93,6 +93,7 @@
         .nav.navbar-nav {
             font-weight: bold;
             background: transparent;
+            transition: 0.5s;
         }
 
         .dropdown .dropdown-menu a:hover{
@@ -112,6 +113,7 @@
             color: black;
             font-size: 18px;
             background: transparent;
+            transition: 0.5s;
         }
         .navbar-nav a:hover{
             color: coral;
@@ -159,13 +161,13 @@
                 position: absolute;
                 top: 0;
                 float: right;
-                right: 70px;
+                right: 95px;
             }
             .navbar.navbar-dark.bg-dark > .nav.navbar-nav.navbar-right > .cart-item{
                 position: absolute;
                 top: 0;
                 float: right;
-                right: 35px;
+                right: 40px;
             }
             .navbar.navbar-dark.bg-dark > .nav.navbar-nav.navbar-right > a, .search-item{
                 position: absolute;
@@ -176,7 +178,10 @@
         }
 
         @media screen and (max-width: 600px){   
-            .navbar.navbar-dark.bg-dark.responsive {position: relative;}
+            .navbar.navbar-dark.bg-dark.responsive {
+                position: relative;
+                transition: 0.5s;
+            }
             .navbar.navbar-dark.bg-dark.responsive a.icon{
                 position:absolute;
                 left: 10px;
@@ -341,7 +346,6 @@
             } else {
                 x.className = "navbar navbar-dark bg-dark";
             }
-            x.slideDown("slow");
         } 
     </script>
 </body>
