--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -32,18 +32,67 @@
             width: 100%;
             opacity: calc();
         }
+        #topbar {background: #7F7F7F ;font-size: 12px; color: #FFFF}
+        #topbar p {padding: 4px 0;margin-bottom:0;}
+        .topbar-hotline a.phone-num { display: inline-block;}
+        .topbar-hotline {text-align: right;margin: 3.5px 0 0;}
+        .topbar-hotline span.text-phone{color:#FFFF;font-weight:bold;letter-spacing:0.4px;}
+        .topbar-hotline span.circle-phone{
+            display: inline-block;border-radius: 50%;
+            -webkit-animation: ripple 1.0s linear infinite;
+            animation: ripple 1.0s linear infinite;
+        }
+        .topbar-hotline a.phone-num .fa {
+            width: 35px;
+            height: 35px;
+            line-height: 35px;
+            border-color:#e00000;
+            color:#e00000;
+            font-size: 16px;	 
+            margin: 0;	
+        }
+        .topbar-hotline a.phone-num .fa {
+            width: 22px;
+            height: 22px;
+            line-height: 22px;
+            border: 1px solid #FFFF;
+            color: #FFFF;
+            border-radius: 50%;
+            text-align: center;
+            animation: 1s ease-in-out 0s normal none infinite running h-alo-ring-ring;
+            font-size: 10px;
+            display: inline-block;
+            vertical-align: middle;margin-right:5px;
+        }
     </style>
 </head>
 
 <body>
-    <h1 style="text-align: center;">Location</h1>
+    <div id="topbar-down">
+        <div class="container-fluid" style="margin-left: 20px;">
+            <div class="row">
+                <div class="col-md-6 col-sm-6 col-xs-12 topbar-content">
+                  <p>
+                    <a href="/">Trang chủ</a> / Liên hệ
+                  </p>
+                </div>
+                <div class="col-md-6 col-sm-6 col-xs-12 topbar-hotline">
+                    <a class="phone-num" href="tel:0123456789"></a>
+                    <span class="circle-phone">
+                        <i class="fa fa-phone"></i>
+                    </span>
+                </div>
+            </div>
+        </div>
+    </div>
 
+    <h3 style="text-align: center;">Hướng dẫn chỉ đường</h3>
     <div class="container">
         <!-- <iframe src="https://www.google.com/maps/embed?pb=21.0217269,105.7914069/20.9932004,105.8485231/@21.0064702,105.7835865,13z/data=!3m1!4b1!4m4!4m3!1m1!4e1!1m0" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" id="map"></iframe> -->
         <iframe src="https://www.google.com/maps/embed?pb=!1m26!1m12!1m3!1d29796.61087169622!2d105.8073626613405!3d21.009612367297017!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m11!3e6!4m3!3m2!1d21.021726899999997!2d105.7914069!4m5!1s0x3135ac0e787fe273%3A0x7728f6e456c3a685!2zNjYgTmfDtSAxOTEgTWluaCBLaGFpLCBNaW5oIEtoYWksIEhhaSBCw6AgVHLGsG5nLCBIw6AgTuG7mWksIFZp4buHdCBOYW0!3m2!1d20.9974445!2d105.8583999!5e0!3m2!1svi!2s!4v1639410988768!5m2!1svi!2s"
             width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     </div>
-    <h1 style="text-align: center;">About us</h1>
+    <h3 style="text-align: center;">Về chúng tôi</h3>
     <footer>
         <div class="container">
             <!--three js representation-->
@@ -54,7 +103,7 @@
                             <img class="hover-shadow cursor" src="/icon/email.png" alt="Card image cap">
                         </a>
                         <div class="card-body">
-                            <h5 class="card-title">EMAIL</h5>
+                            <h5 class="card-title">Thư điện tử</h5>
                             <p class="card-text">Contact with us via Email</p>
                         </div>
                     </div>
@@ -66,7 +115,7 @@
                             <img class="hover-shadow cursor" src="/icon/telephone.png" alt="Card image cap">
                         </a>
                         <div class="card-body">
-                            <h5 class="card-title">PHONE</h5>
+                            <h5 class="card-title">Điện thoại</h5>
                             <p class="card-text">Phone num: (+84) 0862263986</p>
                         </div>
                     </div>
