--- a/views/header.ejs
+++ b/views/header.ejs
@@ -109,7 +109,7 @@
         }
 
         .navbar-nav a{
-            font-weight: bold;
+            font-weight: 350;
             color: black;
             font-size: 18px;
             background: transparent;
