--- a/views/home.ejs
+++ b/views/home.ejs
@@ -239,7 +239,7 @@
         </div>
     </div>
 
-    <%- include ('header', {products: products}) -%>
+    <%- include ('header') -%>
     <%- include ('slideshow') -%>
 
     <div class="container" style="margin-top: 25px;">
