--- a/views/order.ejs
+++ b/views/order.ejs
@@ -11,7 +11,7 @@
   </head>
   <body>
     <h1 style="text-align: center;">ĐƠN HÀNG CỦA BẠN</h1>
-    <% if(bill) {%>
+    <% if(bill !== undefined) {%>
       <div class="row">
         <div class="col-md-2"></div>
         <div class="col-md-8">
