--- a/views/orders.ejs
+++ b/views/orders.ejs
@@ -8,12 +8,17 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
+        <style>
+          
+        </style>
+
     </head>
     <body>
-        <h1>QUẢN LÝ ĐƠN HÀNG</h1>
+        <h3><a href="/">HOME/</a>QUẢN LÝ ĐƠN HÀNG</h3>
         <div class="container">
+            <!-- orders table -->
             
-
         </div>
     </body>
 </html>
