--- a/views/header.ejs
+++ b/views/header.ejs
@@ -207,7 +207,7 @@
     
     <nav class="navbar navbar-dark bg-dark" id="topMenu" style="background-color: #FFF;">
         <div class="navbar navbar-header">
-            <a class="navbar-brand" href="/" style="margin-left: 30%;">
+            <a class="navbar-brand" href="/" style="margin-left: 35%;">
                 <img class="brand-img" src="/assets/logo.jpg" width="90px" height="50px" alt="League store 77">
             </a>
         </div>   
@@ -311,7 +311,7 @@
                         <span class="glyphicon glyphicon-shopping-cart" style="color: black;">0
                         </span>
                     <% } else { %>
-                        <span class="glyphicon glyphicon-shopping-cart" style="color:coral;"><%=products.length%>
+                        <span class="glyphicon glyphicon-shopping-cart" style="color:black;"><%=products.length%>
                         </span>
                     <%}%>
                 </a>
