--- a/views/slideshow.ejs
+++ b/views/slideshow.ejs
@@ -6,7 +6,7 @@
 <div id="carouselIndicators" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner" >
         <div class="item active">
-            <img src="/banner/bn1.jpeg" style="width: 100%;">
+            <img src="/banner/bn1.jpg" style="width: 100%;">
         </div>
         <div class="item">
             <img src="/banner/bn2.jpeg" style="width: 100%;">
