--- a/views/newarrivals.ejs
+++ b/views/newarrivals.ejs
@@ -205,6 +205,25 @@
                 background-color: #ffff;
                 padding: 10px;
             }
+            .grid-container-top {
+                display: grid;
+                grid-template-columns: auto auto auto;
+                grid-gap: 3px 3px;
+                background-color: #ffff;
+                padding: 10px;
+                border: thin solid rgb(228, 216, 216);
+                border-radius: 3px;
+            }
+            .button-showmore .moreproduct{
+                padding: 7px 20px;
+                text-transform: uppercase;
+                border: 2px solid #000;
+                border-radius: 0;
+                font-size: 13px;
+                font-weight: bold;
+                color: #000 !important;
+                margin-left: 35%;
+            }
         }
 
         .button-showmore .moreproduct{
